# capiscio-mcp-python

./: .coverage  .gitignore  CHANGELOG.md  Dockerfile.test  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  integration-tests.yml  publish.yml
capiscio_mcp/: __init__.py  errors.py  guard.py  pop.py  registration.py  server.py  types.py
capiscio_mcp/_core/: __init__.py  client.py  health.py  lifecycle.py  version.py
capiscio_mcp/_proto/: __init__.py
capiscio_mcp/_proto/capiscio/: __init__.py
capiscio_mcp/_proto/capiscio/v1/: __init__.py  mcp_pb2.py  mcp_pb2_grpc.py
capiscio_mcp/integrations/: __init__.py  mcp.py
docs/: api-reference.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: client-side.md  evidence.md  mcp-integration.md  server-registration.md  server-side.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api-reference/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/guides/client-side/: index.html
site/guides/evidence/: index.html
site/guides/mcp-integration/: index.html
site/guides/server-side/: index.html
site/search/: search_index.json
tests/: conftest.py  test_core_client.py  test_core_health.py  test_core_lifecycle.py  test_core_version.py  test_errors.py  test_guard.py  test_integrations.py  test_pop.py  test_registration.py  test_server.py  test_types.py
